objects/inov8__PMT_Task__c.object
<CustomObject>
    <description>An activity that has been assigned to a User.</description>
    <fields>
        <fullName>inov8__Alert__c</fullName>
        <formula>IF(AND(inov8__Days_Late__c &gt;0,TEXT(inov8__Status__c) &lt;&gt; &quot;On Hold&quot;),IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_warning_60.png&quot;,&quot;Late&quot;,20,20), 
IF( TEXT(inov8__Sign_off_status__c) = &quot;Approved&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_approval.png&quot;,&quot;Approved&quot;,20,20), 
CASE( TEXT(inov8__Status__c) , 
&quot;Not Started&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_routing_offline_60.png&quot;,&quot;Incomplete&quot;,20,20), 
&quot;In Progress&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Clock.png&quot;,&quot;In Progress&quot;,20,20), 
&quot;On Hold&quot;,IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_error_60.png&quot;,&quot;On Hold&quot;,20,20), 
IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_success_60.png&quot;,&quot;Closed&quot;,20,20))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Assigned_To1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PMT_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inov8__Assigned_To_Email__c</fullName>
        <formula>inov8__Assigned_To1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Checklist_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checklist Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inov8__Days_Late__c</fullName>
        <formula>IF( ISPICKVAL(inov8__Status__c,&apos;Completed&apos;) || ISPICKVAL(inov8__Status__c,&apos;Closed, not Completed&apos;),0, Today() - inov8__Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Description__c</fullName>
        <inlineHelpText>The general description of the task. For example, what is the purpose of the task.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Due_Date__c</fullName>
        <inlineHelpText>The date this task is due to be completed</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Duration__c</fullName>
        <formula>inov8__Due_Date__c - inov8__Start_Date__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Is_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Milestone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inov8__Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inov8__My_Task__c</fullName>
        <formula>IF(inov8__Assigned_To1__c = $User.Id , &quot;me&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__On_Hold_Reason__c</fullName>
        <inlineHelpText>If blocked, why?</inlineHelpText>
        <label>On Hold Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Percentage_Completion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Task Completion %</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Phase__c</fullName>
        <inlineHelpText>The phase that this task is assigned to.</inlineHelpText>
        <label>Phase</label>
        <referenceTo>inov8__PMT_Phase__c</referenceTo>
        <relationshipLabel>PMT Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Id__c</fullName>
        <formula>CASESAFEID(inov8__Phase__r.inov8__Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Name__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/PMT_Project__c/&quot; &amp; inov8__Phase__r.inov8__Project__c &amp; &quot;/view&quot;, inov8__Phase__r.inov8__Project__r.Name,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Sign_off_status__c</fullName>
        <label>Sign-off status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Start_Date__c</fullName>
        <inlineHelpText>When should this task start by?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Status_Icon_Name__c</fullName>
        <formula>IF(AND(inov8__Days_Late__c &gt;0,TEXT(inov8__Status__c) &lt;&gt; &quot;On Hold&quot;),&quot;utility:warning&quot;, 
IF( TEXT(inov8__Sign_off_status__c) = &quot;Approved&quot;, &quot;utility:approval&quot;, 
CASE( TEXT(inov8__Status__c) , 
&quot;Not Started&quot;, &quot;utility:routing_offline&quot;, 
&quot;In Progress&quot;, &quot;utility:clock&quot;, 
&quot;On Hold&quot;,&quot;utility:error&quot;, 
&quot;utility:success&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Status_Icon__c</fullName>
        <formula>IF(AND(inov8__Days_Late__c &gt;0,TEXT(inov8__Status__c) &lt;&gt; &quot;On Hold&quot;),IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_warning_60.png&quot;,&quot;Late&quot;,20,20), 
IF( TEXT(inov8__Sign_off_status__c) = &quot;Approved&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_approval.png&quot;,&quot;Approved&quot;,20,20), 
CASE( TEXT(inov8__Status__c) , 
&quot;Not Started&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_routing_offline_60.png&quot;,&quot;Incomplete&quot;,20,20), 
&quot;In Progress&quot;, IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Clock.png&quot;,&quot;In Progress&quot;,20,20), 
&quot;On Hold&quot;,IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_error_60.png&quot;,&quot;On Hold&quot;,20,20), 
IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_success_60.png&quot;,&quot;Closed&quot;,20,20))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Status__c</fullName>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed, not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Task_Level__c</fullName>
        <label>Task Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Task_Level_formula__c</fullName>
        <formula>inov8__Task_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Task_Name_w_Alert__c</fullName>
        <formula>inov8__Status_Icon__c &amp;&quot; &quot;&amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Name w. Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Weighted_percentage__c</fullName>
        <formula>inov8__Duration__c *  inov8__Percentage_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PMT Task</label>
    <listViews>
        <fullName>inov8__All</fullName>
        <columns>NAME</columns>
        <columns>inov8__Phase__c</columns>
        <columns>inov8__Percentage_Completion__c</columns>
        <columns>inov8__Assigned_To1__c</columns>
        <columns>inov8__Start_Date__c</columns>
        <columns>inov8__Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inov8__My_Open_Tasks_2</fullName>
        <columns>inov8__Project_Name__c</columns>
        <columns>NAME</columns>
        <columns>inov8__Percentage_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inov8__My_Task__c</field>
            <operation>equals</operation>
            <value>me</value>
        </filters>
        <filters>
            <field>inov8__Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,On Hold</value>
        </filters>
        <label>My Open Tasks</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMT Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inov8__Task_On_hold_Reason_not_null_if_On_Hold</fullName>
        <active>true</active>
        <description>Task On hold Reason Mandatory if Task Status is &apos;On Hold&apos;</description>
        <errorConditionFormula>(TEXT(inov8__Status__c)=&apos;On Hold&apos;) &amp;&amp; ISBLANK(inov8__On_Hold_Reason__c)</errorConditionFormula>
        <errorMessage>On Hold Reason should not be Blank if Status is &apos;On Hold&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inov8__Task_start_date_less_than_end_date</fullName>
        <active>true</active>
        <description>Task Start date must be less than the Task End date</description>
        <errorConditionFormula>NOT(ISNULL(inov8__Start_Date__c)) &amp;&amp; NOT(ISNULL(inov8__Due_Date__c)) &amp;&amp; inov8__Due_Date__c&lt;inov8__Start_Date__c</errorConditionFormula>
        <errorMessage>End Date must be after Start Date.</errorMessage>
    </validationRules>
</CustomObject>